--- a/cart-page.html
+++ b/cart-page.html
@@ -209,24 +209,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="shippingest">
-                            <div class="shippingest__header">
-                                <p>
-                                    Shipping estimates
-                                </p>
-                            </div>
-                            <div class="shippingest__body">
-                                <form action="#">
-                                    <p class="destination">Destination: <span>Canada</span></p>
-                                    <div class="inputfield">
-                                        <input type="text" placeholder="ZIP Code">
-                                        <input type="submit" value="Calculate" class="greenbtn">
-                                    </div>
-                                    <p class="totalweight">Total Weight: 0.79 kg</p>
-                                </form>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="col-lg-4">
@@ -276,6 +258,181 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="acccontentsect prevbought">
+                    <div class="acccontentsect__header">
+                        <p>
+                            Products you previously bought
+                        </p>
+                    </div>
+                    <div class="acccontentsect__body">
+                        <div class="productsection-sliderwrapper">
+                            <div class="swiper productsection-slider prevboughtslider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="productbox">
+                                            <a href="#">
+                                                <div class="productbox__img">
+                                                    <img src="img/main/product1.png" alt="product">
+                                                </div>
+                                            </a>
+                                            <div class="productbox__descr">
+                                                <p class="price">$ 23.45</p>
+                                                <p class="aboutproduct">
+                                                    BJORG Organic Coconut Nectar Drink, Coconut Water and Milk
+                                                </p>
+                                                <div class="prodcount">
+                                                    <p class="addtocart">Add to cart</p>
+                                                    <div class="number productadd">
+                                                        <span class="minus"><img src="img/header/minus.svg"
+                                                                alt="minus"></span>
+                                                        <input type="text" value="1" />
+                                                        <span class="plus"><img src="img/header/plus.svg"
+                                                                alt="minus"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="productbox">
+                                            <a href="#">
+                                                <div class="productbox__img">
+                                                    <img src="img/main/product2.png" alt="product">
+                                                </div>
+                                            </a>
+                                            <div class="productbox__descr">
+                                                <p class="price">Now $ 19.99</p>
+                                                <p class="aboutproduct">
+                                                    Go Free Corn Flakes Gluten Free Cereal Bar, 12 Pieces
+                                                </p>
+                                                <div class="prodcount">
+                                                    <p class="addtocart">Add to cart</p>
+                                                    <div class="number productadd">
+                                                        <span class="minus"><img src="img/header/minus.svg"
+                                                                alt="minus"></span>
+                                                        <input type="text" value="1" />
+                                                        <span class="plus"><img src="img/header/plus.svg"
+                                                                alt="minus"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="productbox">
+                                            <a href="#">
+                                                <div class="productbox__img">
+                                                    <img src="img/main/product3.png" alt="product">
+                                                </div>
+                                            </a>
+                                            <div class="productbox__descr">
+                                                <p class="price">Now $ 12.99</p>
+                                                <p class="aboutproduct">
+                                                    Tinsel Cereals Tsolation Natura Rizza from 350 grams
+                                                </p>
+                                                <div class="prodcount">
+                                                    <p class="addtocart">Add to cart</p>
+                                                    <div class="number productadd">
+                                                        <span class="minus"><img src="img/header/minus.svg"
+                                                                alt="minus"></span>
+                                                        <input type="text" value="1" />
+                                                        <span class="plus"><img src="img/header/plus.svg"
+                                                                alt="minus"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="swiper-slide">
+                                            <div class="productbox">
+                                                <a href="#">
+                                                    <div class="productbox__img">
+                                                        <img src="img/main/product4.png" alt="product">
+                                                    </div>
+                                                </a>
+                                                <div class="productbox__descr">
+                                                    <p class="price">$ 26.55</p>
+                                                    <p class="aboutproduct">
+                                                        Yes with Rice - Shortbread Filled with Hazelnut Cream - 200 g
+                                                    </p>
+                                                    <div class="prodcount">
+                                                        <p class="addtocart">Add to cart</p>
+                                                        <div class="number productadd">
+                                                            <span class="minus"><img src="img/header/minus.svg"
+                                                                    alt="minus"></span>
+                                                            <input type="text" value="1" />
+                                                            <span class="plus"><img src="img/header/plus.svg"
+                                                                    alt="minus"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="swiper-slide">
+                                            <div class="productbox">
+                                                <a href="#">
+                                                    <div class="productbox__img">
+                                                        <img src="img/main/product3.png" alt="product">
+                                                    </div>
+                                                </a>
+                                                <div class="productbox__descr">
+                                                    <p class="price">Now $ 12.99</p>
+                                                    <p class="aboutproduct">
+                                                        Tinsel Cereals Tsolation Natura Rizza from 350 grams
+                                                    </p>
+                                                    <div class="prodcount">
+                                                        <p class="addtocart">Add to cart</p>
+                                                        <div class="number productadd">
+                                                            <span class="minus"><img src="img/header/minus.svg"
+                                                                    alt="minus"></span>
+                                                            <input type="text" value="1" />
+                                                            <span class="plus"><img src="img/header/plus.svg"
+                                                                    alt="minus"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="swiper-slide">
+                                            <div class="productbox">
+                                                <a href="#">
+                                                    <div class="productbox__img">
+                                                        <img src="img/main/product3.png" alt="product">
+                                                    </div>
+                                                </a>
+                                                <div class="productbox__descr">
+                                                    <p class="price">Now $ 12.99</p>
+                                                    <p class="aboutproduct">
+                                                        Tinsel Cereals Tsolation Natura Rizza from 350 grams
+                                                    </p>
+                                                    <div class="prodcount">
+                                                        <p class="addtocart">Add to cart</p>
+                                                        <div class="number productadd">
+                                                            <span class="minus"><img src="img/header/minus.svg"
+                                                                    alt="minus"></span>
+                                                            <input type="text" value="1" />
+                                                            <span class="plus"><img src="img/header/plus.svg"
+                                                                    alt="minus"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-button-next custom sl2"></div>
+                            <div class="swiper-button-prev custom sl2"></div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <img class="cartbgelem1" src="img/background-elements/bgelem7.png" alt="img">
