--- a/my-account-recent-orders.html
+++ b/my-account-recent-orders.html
@@ -261,13 +261,20 @@
                                     <div class="myacc-deliveredwrap">
                                         <div class="myacc-delivered">
                                             <div class="myacc-delivered__left">
-                                                <p class="delordertitle">
-                                                    <img src="img/checkout/check.svg" alt="img">
-                                                    Delivered
-                                                </p>
+                                                <div class="myacc-delivered__topinfo">
+                                                    <p class="delordertitle">
+                                                        <img src="img/checkout/check.svg" alt="img">
+                                                        Delivered
+                                                    </p>
+                                                    <a href="#" class="viewinv">
+                                                        <img src="img/invoice/ic-viewinvoice.svg" alt="img">
+                                                        View the invoice
+                                                    </a>
+                                                </div>
                                                 <p class="delorderinfo">
                                                     <span>Delivered on April 16, 2023</span>
                                                     <span>Order No. 517547572</span>
+                                                    <a href="#">View the invoice</a>
                                                 </p>
                                                 <div class="deliveredproducts">
                                                     <div class="deliveredproduct">
@@ -289,18 +296,25 @@
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
                                                     data-bs-target="#custserv">Customer Servise</a>
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
-                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
+                                                    data-bs-target="#recentorderspopup">Recent orders </a>
                                             </div>
                                         </div>
                                         <div class="myacc-delivered">
                                             <div class="myacc-delivered__left">
-                                                <p class="delordertitle">
-                                                    <img src="img/checkout/check.svg" alt="img">
-                                                    Delivered
-                                                </p>
+                                                <div class="myacc-delivered__topinfo">
+                                                    <p class="delordertitle">
+                                                        <img src="img/checkout/check.svg" alt="img">
+                                                        Delivered
+                                                    </p>
+                                                    <a href="#" class="viewinv">
+                                                        <img src="img/invoice/ic-viewinvoice.svg" alt="img">
+                                                        View the invoice
+                                                    </a>
+                                                </div>
                                                 <p class="delorderinfo">
                                                     <span>Delivered on April 01, 2023</span>
                                                     <span>Order No. 517547575</span>
+                                                    <a href="#">View the invoice</a>
                                                 </p>
                                                 <div class="deliveredproducts">
                                                     <div class="deliveredproduct">
@@ -322,18 +336,25 @@
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
                                                     data-bs-target="#custserv">Customer Servise</a>
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
-                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
+                                                    data-bs-target="#recentorderspopup">Recent orders </a>
                                             </div>
                                         </div>
                                         <div class="myacc-delivered">
                                             <div class="myacc-delivered__left">
-                                                <p class="delordertitle">
-                                                    <img src="img/checkout/check.svg" alt="img">
-                                                    Delivered
-                                                </p>
+                                                <div class="myacc-delivered__topinfo">
+                                                    <p class="delordertitle">
+                                                        <img src="img/checkout/check.svg" alt="img">
+                                                        Delivered
+                                                    </p>
+                                                    <a href="#" class="viewinv">
+                                                        <img src="img/invoice/ic-viewinvoice.svg" alt="img">
+                                                        View the invoice
+                                                    </a>
+                                                </div>
                                                 <p class="delorderinfo">
                                                     <span>Delivered on April 16, 2023</span>
                                                     <span>Order No. 517547572</span>
+                                                    <a href="#">View the invoice</a>
                                                 </p>
                                                 <div class="deliveredproducts">
                                                     <div class="deliveredproduct">
@@ -354,7 +375,7 @@
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
                                                     data-bs-target="#custserv">Customer Servise</a>
                                                 <a href="#" class="bordergreenbtn" data-bs-toggle="modal"
-                                                    data-bs-target="#recentorderspopup">Customer Servise</a>
+                                                    data-bs-target="#recentorderspopup">Recent orders </a>
                                             </div>
                                         </div>
                                     </div>
