--- a/sitemap.html
+++ b/sitemap.html
@@ -17,6 +17,8 @@
             <ul style="margin-bottom: 40px;">
                 
                 <li><h3>Latest updates</h3></li>
+                
+                <li><a target="_blank" href="invoice.html">Invoice page</a></li>
                 <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
                 <br>
                 <p>Emails</p>
