--- a/cart-page.html
+++ b/cart-page.html
@@ -172,6 +172,24 @@
                                             <img src="img/header/delete-icon.svg" alt="remove">
                                         </button>
                                     </div>
+
+                                    <div class="cart__autoorder">
+                                        <p>Auto-reorder</p>
+                                        <div class="cart__aowrap">
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao1" name="cartautoorder">
+                                                <label for="cao1">Every week</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao2" name="cartautoorder">
+                                                <label for="cao2">Bi-Weekly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao3" name="cartautoorder">
+                                                <label for="cao3">Monthly</label>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="cart__product-row">
                                     <div class="cart__product-check">
@@ -206,7 +224,34 @@
                                             <img src="img/header/delete-icon.svg" alt="remove">
                                         </button>
                                     </div>
+
+                                    <div class="cart__autoorder">
+                                        <p>Auto-reorder</p>
+                                        <div class="cart__aowrap">
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao11" name="cartautoorder2">
+                                                <label for="cao11">Every week</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao21" name="cartautoorder2">
+                                                <label for="cao21">Bi-Weekly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao31" name="cartautoorder2">
+                                                <label for="cao31">Monthly</label>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="chinfosect">
+                            <div class="chunfosect__header">
+                                <p>Shipping estimates</p>
+                            </div>
+                            <div class="chunfosect__body">
+                                sdsd
                             </div>
                         </div>
                     </div>
@@ -259,7 +304,7 @@
                     </div>
                 </div>
 
-                <div class="acccontentsect prevbought">
+                <!-- <div class="acccontentsect prevbought">
                     <div class="acccontentsect__header">
                         <p>
                             Products you previously bought
@@ -431,7 +476,7 @@
                             <div class="swiper-button-prev custom sl2"></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
