--- a/checkout.html
+++ b/checkout.html
@@ -139,6 +139,70 @@
                             <div class="chunfosect__header">
                                 <p>
                                     <i>3</i>
+                                    Auto-reorder
+                                </p>
+                                <div class="chinfosect__status">
+                                    <span class="minusst"></span>
+                                </div>
+                            </div>
+                            <div class="chunfosect__body">
+                                <div class="checkout-reorderrow">
+                                    <div class="imgwrap">
+                                        <img src="img/cart/cart-product1.png" alt="img">
+                                    </div>
+                                    <div class="descrwrap">
+                                        <p class="title">
+                                            Light - With low carbohydrates - Fruit Carb Fitness SyrupMax...
+                                        </p>
+                                        <div class="cart__aowrap">
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao11" name="cartautoorder2">
+                                                <label for="cao11">Every week</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao21" name="cartautoorder2">
+                                                <label for="cao21">Bi-Weekly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao31" name="cartautoorder2">
+                                                <label for="cao31">Monthly</label>
+                                            </div>
+                                        </div>
+                                        <a href="#" class="unsub">Unsubscribe</a>
+                                    </div>
+                                </div>
+                                <div class="checkout-reorderrow">
+                                    <div class="imgwrap">
+                                        <img src="img/cart/cart-product2.png" alt="img">
+                                    </div>
+                                    <div class="descrwrap">
+                                        <p class="title">
+                                            NABALI FAIRKOST Freekeh Frikeh secondo Ottolenghi 250 g
+                                        </p>
+                                        <div class="cart__aowrap">
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao12" name="cartautoorder1">
+                                                <label for="cao12">Every week</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao22" name="cartautoorder1">
+                                                <label for="cao22">Bi-Weekly</label>
+                                            </div>
+                                            <div class="cart__aobox">
+                                                <input type="radio" id="cao32" name="cartautoorder1">
+                                                <label for="cao32">Monthly</label>
+                                            </div>
+                                        </div>
+                                        <a href="#" class="unsub">Unsubscribe</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="chinfosect">
+                            <div class="chunfosect__header">
+                                <p>
+                                    <i>4</i>
                                     Payment method
                                 </p>
                                 <div class="chinfosect__status">
