--- a/cart-page.html
+++ b/cart-page.html
@@ -251,7 +251,20 @@
                                 <p>Shipping estimates</p>
                             </div>
                             <div class="chunfosect__body">
-                                sdsd
+                                <div class="destinationbox">
+                                    <p>Destination: <span>Canada</span></p>
+                                    <form action="#">
+                                        <div class="rowform">
+                                            <div class="inputfield">
+                                                <input type="text" id="cardname" placeholder="ZIP Code">
+                                            </div>
+                                            <input class="greenbtn" type="submit" value="Calculate">
+                                        </div>
+                                    </form>
+                                    <p class="destinationbox__infotext">
+                                        Total Weight: 0.79 kg
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -549,8 +562,6 @@
             </div>
         </div>
     </footer>
-
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/swiper.js"></script>
