--- a/sitemap.html
+++ b/sitemap.html
@@ -20,10 +20,12 @@
                 <li><a target="_blank" href="index.html">Home page</a></li>
                 <li><a target="_blank" href="product-page.html">Product page</a></li>
                 <li><a target="_blank" href="cart-page.html">Cart page</a></li>
+                <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
+                <li><a target="_blank" href="checkout.html">Checkout</a></li>
                 <br><hr><br>
                 
                 <li><a target="_blank" href="invoice.html">Invoice page</a></li>
-                <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
+                
                 <br><br><br>
                 <p>Emails</p>
                 <li><a target="_blank" href="emails-new/email-admin-product-approval.html">Approval new product for admin</a></li>
