--- a/cart-page.html
+++ b/cart-page.html
@@ -246,7 +246,7 @@
                             </div>
                         </div>
 
-                        <div class="chinfosect">
+                        <!-- <div class="chinfosect">
                             <div class="chunfosect__header">
                                 <p>Shipping estimates</p>
                             </div>
@@ -266,7 +266,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="col-lg-4">
@@ -317,7 +317,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="acccontentsect prevbought">
+                <div class="acccontentsect prevbought">
                     <div class="acccontentsect__header">
                         <p>
                             Products you previously bought
@@ -489,7 +489,7 @@
                             <div class="swiper-button-prev custom sl2"></div>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
             </div>
 
