--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="topinfoblock">
+    <!-- <div class="topinfoblock">
         <div class="container">
             <button class="closetrip">
                 <img src="img/new/close.svg" alt="close">
@@ -24,6 +24,12 @@
                 <img src="img/new/hard-hat.svg" alt="">
             </p>
         </div>
+    </div> -->
+    <div class="striprow">
+        <p>
+            <img src="img/main/freeshipping-icon.svg" alt="icon">
+            free shipping over $100
+        </p>
     </div>
     <header class="header">
         <div class="container">
